namespace DogApp.Web.Dto;
public class Root
{
    public List? List { get; set; }
}

